# score-parser

./: CMakeLists.txt
include/: library.h
src/: library.cpp  main.cpp
